# backendsqlite/src/routes/product.js
@@ -3,11 +3,17 @@ const router = express.Router()
 const product = require('../controllers/product.js')
 const user = require('../controllers/user.js')
 
+// Get
 router.get('/api/products', user.verifyTokenAndFindUser, product.getProducts)
-// router.post('/api/users', user.newUser)
+router.get('/api/products/:type', user.verifyTokenAndFindUser, product.getProductsByType)
 
-// router.get('/api/users/:email', user.getUserByEmail)
-// router.put('/api/users', user.updateUser)
-// router.delete('/api/users/:id', user.deleteUser)
+// Post
+router.post('/api/products', user.verifyTokenAndFindUser, user.verifyAdmin, product.newProduct)
+
+// Put
+router.put('/api/products/:id', user.verifyTokenAndFindUser, user.verifyAdmin, product.updateProduct)
+
+// Delete
+router.delete('/api/products/:id', user.verifyTokenAndFindUser, user.verifyAdmin, product.deleteProduct)
 
 module.exports = router
